Fix images stretching in safari

--- a/src/cases/wearevoice.sass
+++ b/src/cases/wearevoice.sass
@@ -158,9 +158,11 @@ $textColor: rgba(#EADFD8, .6)
       display: flex
       width: 100%
       margin-top: 2rem
+      max-height: 50rem
 
       @media screen and (min-width: 850px)
         margin-top: 5rem
+        max-height: 70rem
 
       &:nth-of-type(2)
         margin-top: 10rem
@@ -169,6 +171,8 @@ $textColor: rgba(#EADFD8, .6)
         max-width: 100%
         display: flex
         min-width: calc(50% - 1rem)
+        align-self: center
+        object-fit: cover
 
         @media screen and (min-width: 850px)
           min-width: calc(50% - 2.5rem)
